# Mic.Array.Demo

./: .gitignore  CMakeLists.txt  README
scripts/rk3229_linux/: builder.sh  init.sh
scripts/rk3229_linux/bak/: readme.txt  rockchip_rk322x_defconfig  sshd_config
src/: CMakeLists.txt  Logger.h  Mic.cpp  Mic.h  MicMatrixCreator.cpp  MicMatrixCreator.h  MicRk3229.cpp  MicRk3229.h  Precompiled.h  Singleton.h  main.cpp
utils/: CMakeLists.txt  CatDevices.cpp  CatDevices.h  PcmPlayer.cpp  PcmPlayer.h
